--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -260,7 +260,7 @@
     <string name="woof_information">정보</string>
     <string name="woof_description">소개</string>
     <string name="woof_ongoing_walk_status">산책을 시작했어요!</string>
-    <string name="woof_after_walk_status">산책을 완료했어요!\n</string>
+    <string name="woof_after_walk_status">산책을 완료했어요!</string>
 
     <!--프로필-->
     <string name="male">남</string>
