--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -259,6 +259,7 @@
     <string name="woof_register_footprint">이 위치에 발자국 등록</string>
     <string name="woof_information">정보</string>
     <string name="woof_description">소개</string>
+    <string name="woof_before_walk_status">산책하러 가는중이에요!</string>
     <string name="woof_ongoing_walk_status">산책을 시작했어요!</string>
     <string name="woof_after_walk_status">산책을 완료했어요!</string>
 
