refactor: 산책상태 스낵바 수정

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -237,7 +237,7 @@
     <string name="woof_setting">설정</string>
     <string name="woof_package">package:%s</string>
     <string name="woof_cant_mark">%d초 후에 발자국을 남길 수 있어요!</string>
-    <string name="woof_marker_registered">발자국이 등록됐어요!</string>
+    <string name="woof_marker_registered">발자국을 등록했어요!</string>
     <string name="woof_has_not_pet">강아지를 등록해야 발자국을 남길 수 있어요!</string>
     <string name="woof_days_ago">%d일 전</string>
     <string name="woof_hours_ago">%d시간 전</string>
@@ -254,9 +254,6 @@
     <string name="woof_register_footprint">이 위치에 발자국 등록</string>
     <string name="woof_information">정보</string>
     <string name="woof_description">소개</string>
-    <string name="woof_before_walk_status">산책하러 가는중이에요!</string>
-    <string name="woof_ongoing_walk_status">산책을 시작했어요!</string>
-    <string name="woof_after_walk_status">산책을 완료했어요!</string>
 
     <!--프로필-->
     <string name="male">남</string>
