--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -292,4 +292,5 @@
     <string name="my_club_title">내 모임</string>
     <string name="my_club_subject">참여 모임</string>
     <string name="my_head_club_subject">방장인 모임</string>
+    <string name="club_list_my_location_default">내 동네 설정</string>
 </resources>
