--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -196,7 +196,7 @@
     <string name="club_detail_fail_load">모임을 찾지 못했습니다.</string>
     <string name="club_detail_fail_button">뒤로가기</string>
     <string name="club_detail_participate_text">참여하기</string>
-    <string name="club_detail_un_participate_text">모집완료</string>
+    <string name="club_detail_un_participate_text">참여불가</string>
     <string name="club_detail_mine_text">모임보기</string>
     <string name="club_detail_update">수정하기</string>
     <string name="club_detail_delete">방나가기</string>
@@ -292,4 +292,5 @@
     <string name="my_club_title">내 모임</string>
     <string name="my_club_subject">참여 모임</string>
     <string name="my_head_club_subject">방장인 모임</string>
+    <string name="club_list_my_location_default">내 동네 설정</string>
 </resources>
