--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -22,9 +22,6 @@
     <string name="make_profile_edit_btn_title">선택 완료!</string>
     <string name="user_name_length">%d/8</string>
 
-    <!--홈화면-->
-    <string name="on_back_pressed_Message">뒤로가기 버튼을\n한번 더 누르면 종료됩니다.</string>
-
     <!--마이페이지-->
     <string name="edit_profile_title">프로필 편집</string>
     <string name="register_dog_title">등록하기</string>
@@ -240,7 +237,7 @@
     <string name="woof_setting">설정</string>
     <string name="woof_package">package:%s</string>
     <string name="woof_cant_mark">%d초 후에 발자국을 남길 수 있어요!</string>
-    <string name="woof_marker_registered">발자국이 등록됐어요!</string>
+    <string name="woof_marker_registered">발자국을 등록했어요!</string>
     <string name="woof_has_not_pet">강아지를 등록해야 발자국을 남길 수 있어요!</string>
     <string name="woof_days_ago">%d일 전</string>
     <string name="woof_hours_ago">%d시간 전</string>
@@ -253,14 +250,10 @@
     <string name="woof_age_month">%d개월</string>
     <string name="woof_not_exist_my_footprint">등록된 나의 발자국이 존재하지 않아요!</string>
     <string name="woof_my_footprint">MY</string>
-    <string name="woof_location_load_fail">위치를 불러올 수 없습니다..</string>
     <string name="woof_register_walking_area">산책 영역 등록</string>
     <string name="woof_register_footprint">이 위치에 발자국 등록</string>
     <string name="woof_information">정보</string>
     <string name="woof_description">소개</string>
-    <string name="woof_before_walk_status">산책하러 가는중이에요!</string>
-    <string name="woof_ongoing_walk_status">산책을 시작했어요!</string>
-    <string name="woof_after_walk_status">산책을 완료했어요!</string>
 
     <!--프로필-->
     <string name="male">남</string>
