--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -289,5 +289,6 @@
 
     <!--에러 메시지-->
     <string name="server_error_message">서버 에러가 발생했습니다</string>
-    <string name="file_size_eceed_message">1MB를 초과하는 이미지는 등록할 수 없어요</string>
+    <string name="file_size_exceed_message">1MB를 초과하는 이미지는 등록할 수 없어요</string>
+    <string name="default_error_message">알 수 없는 에러가 발생했어요</string>
 </resources>
