refactor: 앱 이름 변경

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">friendogly</string>
+    <string name="app_name">반갑개</string>
 
     <string name="dog_small">소형견</string>
     <string name="dog_medium">중형견</string>
