--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -212,6 +212,8 @@
     <string name="dog_select_content">조건에 맞는 댕댕이만 선택할 수 있어요!</string>
     <string name="dog_select_prevent_message">%s는 모임에 참여할 수 없어요..</string>
     <string name="dog_select_load_fail">강아지를 등록해야 모임에 참여할 수 있어요!</string>
+    <string name="dog_select_prevent_select">%s는 모임에 데려갈 수 없어요..</string>
+    <string name="dog_select_can_select">%s는 모임에 데려갈 수 있어요!</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
