--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -264,6 +264,8 @@
     <string name="woof_end_walk">산책 종료하기</string>
     <string name="woof_stop_walk">산책을 종료했어요!</string>
     <string name="woof_status_all">전체</string>
+    <string name="woof_address_korea">대한민국</string>
+    <string name="woof_address_korea_english">KR</string>
 
     <!--프로필-->
     <string name="male">남</string>
