--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -267,6 +267,7 @@
     <string name="woof_description">소개</string>
     <string name="woof_footprint_refresh">발자국 불러오기</string>
     <string name="woof_end_walk">산책 종료하기</string>
+    <string name="woof_delete_my_footprint_marker">발자국을 삭제했어요!</string>
     <string name="woof_stop_walk">산책을 종료했어요!</string>
     <string name="woof_status_all">전체</string>
     <string name="woof_address_korea">대한민국</string>
