--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
     <string name="alarm_settings_chatting_push_description">모든 채팅 메시지 알림</string>
     <string name="alarm_settings_club_push">모임 알림</string>
     <string name="alarm_settings_club_push_description">가입한 모임의 알림</string>
+    <string name="alarm_settings_woof_push">산책 알림</string>
+    <string name="alarm_settings_woof_push_description">다른 강아지의 산책 여부 알림</string>
     <string name="setting">설정</string>
     <string name="unsubscribe">탈퇴하기</string>
     <string name="logout">로그아웃</string>
@@ -300,4 +302,5 @@
     <string name="file_size_exceed_message">1MB를 초과하는 이미지는 등록할 수 없어요</string>
     <string name="default_error_message">알 수 없는 에러가 발생했어요</string>
     <string name="kakao_login_error_message">카카오 로그인을 실패했어요</string>
+    <string name="chat_go_club_detail">모임 상세 바로가기</string>
 </resources>
