--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -237,6 +237,7 @@
     <string name="chat_setting_alarm">채팅방 알림</string>
     <string name="chat_setting_alarm_alert">알림을 거부하여 채팅 알림을 받을 수 없습니다.</string>
     <string name="chat_mine">나</string>
+    <string name="chat_go_club_detail">모임 상세 바로가기</string>
 
     <!--멍멍 짓기-->
     <string name="woof_member_name">%s\'s 댕댕이</string>
@@ -303,5 +304,5 @@
     <string name="file_size_exceed_message">1MB를 초과하는 이미지는 등록할 수 없어요</string>
     <string name="default_error_message">알 수 없는 에러가 발생했어요</string>
     <string name="kakao_login_error_message">카카오 로그인을 실패했어요</string>
-    <string name="chat_go_club_detail">모임 상세 바로가기</string>
+    <string name="no_internet_message">네트워크 상태가 좋지 않아요\n연결 상태를 확인하고 다시 시도해주세요</string>
 </resources>
