--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -255,7 +255,7 @@
     <string name="woof_status_after">산책완료</string>
     <string name="woof_walk_before">%d분 째 가는중</string>
     <string name="woof_walk_ongoing">%d분 째 산책중</string>
-    <string name="woof_walk_after">%d시 %d분에 왔다감</string>
+    <string name="woof_walk_after">%d시 %d분에 산책완료</string>
     <string name="woof_age_year">%d살</string>
     <string name="woof_age_month">%d개월</string>
     <string name="woof_not_exist_my_footprint">등록된 나의 발자국이 존재하지 않아요!</string>
