--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -261,6 +261,7 @@
     <string name="woof_not_exist_my_footprint">등록된 나의 발자국이 존재하지 않아요!</string>
     <string name="woof_my_footprint">MY</string>
     <string name="woof_register_walk_area">발자국 등록</string>
+    <string name="woof_address_out_of_korea">발자국 등록은 한국에서만 가능합니다!</string>
     <string name="woof_register_help">발자국은 30초마다 새로 등록할 수 있으며\n기존 발자국은 삭제됩니다!</string>
     <string name="woof_walk_before_help">발자국 반경(1km) 이내에 도착하면\n산책이 시작됩니다!</string>
     <string name="woof_walk_ongoing_help">발자국 반경(1km)을 벗어나면\n산책이 종료됩니다!</string>
@@ -271,7 +272,6 @@
     <string name="woof_fail_to_update_footprint_walk_status">산책 상태를 업데이트하지 못했습니다!</string>
     <string name="woof_fail_to_end_walk">산책 종료에 실패했습니다!</string>
     <string name="woof_fail_to_delete_my_footprint">발자국 삭제에 실패했습니다!</string>
-
     <string name="woof_register_footprint">이 위치에 발자국 등록</string>
     <string name="woof_information">정보</string>
     <string name="woof_description">소개</string>
@@ -281,7 +281,6 @@
     <string name="woof_stop_walk">산책을 종료했어요!</string>
     <string name="woof_status_all">전체</string>
     <string name="woof_address_korea">대한민국</string>
-    <string name="woof_address_korea_english">KR</string>
 
     <!--프로필-->
     <string name="male">남</string>
