--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -267,13 +267,12 @@
     <string name="woof_register_playground_title">놀이터 등록하기</string>
     <string name="woof_address_out_of_korea">발자국 등록은 한국에서만 가능합니다!</string>
     <string name="woof_register_playground_help">놀이터에 다른 강아지들도 참여할 수 있어요!
-        \n강아지 친구들을 만나면 반갑게 인사해보세요~</string>
+        \n친구들을 만나 반갑게 인사해보세요~</string>
     <string name="woof_walk_before_help">발자국 반경(1km) 이내에 도착하면\n산책이 시작됩니다!</string>
     <string name="woof_walk_ongoing_help">발자국 반경(1km)을 벗어나면\n산책이 종료됩니다!</string>
     <string name="woof_fail_to_load_footprint_mark_btn_info">발자국 등록을 위한 정보를 불러오지 못했습니다!</string>
     <string name="woof_fail_to_load_near_footprints">주변 발자국을 불러오지 못했습니다!</string>
     <string name="woof_fail_to_register_footprint">발자국 등록에 실패했습니다!</string>
-    <string name="woof_fail_to_load_playground_info">놀이터 정보를 불러오지 못했습니다!</string>
     <string name="woof_fail_to_update_footprint_walk_status">산책 상태를 업데이트하지 못했습니다!</string>
     <string name="woof_fail_to_end_walk">산책 종료에 실패했습니다!</string>
     <string name="woof_fail_to_delete_my_footprint">발자국 삭제에 실패했습니다!</string>
@@ -287,6 +286,11 @@
     <string name="woof_stop_walk">산책을 종료했어요!</string>
     <string name="woof_status_all">전체</string>
     <string name="woof_address_korea">대한민국</string>
+
+    <!--놀이터-->
+    <string name="playground_participate">놀이터 참여하기</string>
+    <string name="playground_exit">놀이터 나가기</string>
+    <string name="fail_to_load_playground_info">놀이터 정보를 불러오지 못했습니다!</string>
 
     <!--프로필-->
     <string name="male">남</string>
