--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -318,6 +318,16 @@
     <string name="pet_add_alert_positive">등록하기</string>
     <string name="pet_add_alert_negative">다음에 하기</string>
 
+    <!--최근 본 반려동물-->
+    <string name="recent_pet_title">최근 본 반려동물</string>
+    <string name="recent_dog_male">#수컷</string>
+    <string name="recent_dog_female">#암컷</string>
+    <string name="recent_dog_male_neutered">#수컷 중성화</string>
+    <string name="recent_dog_female_neutered">#암컷 중성화</string>
+    <string name="recent_dog_small">#소형견</string>
+    <string name="recent_dog_medium">#중형견</string>
+    <string name="recent_dog_large">#대형견</string>
+
     <!--에러 메시지-->
     <string name="server_error_message">서버 에러가 발생했습니다</string>
     <string name="file_size_exceed_message">1MB를 초과하는 이미지는 등록할 수 없어요</string>
@@ -327,5 +337,9 @@
     <string name="no_internet_message">네트워크 상태가 좋지 않아요\n연결 상태를 확인하고 다시 시도해주세요</string>
     <string name="chat_no_chat_description">현재 참여한 모임이 없어요</string>
     <string name="register_friendogly_description">내 반려견의 행복을 위한\n친구 찾기 서비스</string>
+
+    <!--empty view-->
+    <string name="empty_view_title">최근에 본 반려동물이 없어요</string>
+    <string name="empty_view_description">주변에 사는 반려동물을 만나봐요</string>
 
 </resources>
