--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -36,11 +36,11 @@
     <string name="pet_size_title">크기</string>
     <string name="pet_description_title">소개</string>
     <string name="caliber">구경하기</string>
-    <string name="mypage_title">나의 댕댕이</string>
+    <string name="mypage_title">나의 강아지</string>
     <string name="my_activities">내 활동</string>
     <string name="participation">내가 참여중인 모임</string>
     <string name="club_manager">내가 방장인 모임</string>
-    <string name="pets_profile">함께하는 반려동물</string>
+    <string name="pets_profile">함께하는 강아지</string>
     <string name="tv_pet_add">강아지를 등록해주세요</string>
 
     <!--강아지 상세 화면-->
@@ -50,7 +50,7 @@
     <string name="large_pet_description">대형견이에요</string>
 
     <!--다른 사용자 프로필-->
-    <string name="empty_other_pet">함께하는 반려동물이 없어요</string>
+    <string name="empty_other_pet">함께하는 강아자가 없어요</string>
     <string name="close">취소</string>
 
     <!--사용자 더보기 바텀 시트-->
@@ -105,10 +105,10 @@
     <string name="dialog_negative_default">아니오</string>
 
     <!--강아지 등록-->
-    <string name="pet_name_title">댕댕이 이름</string>
-    <string name="register_pet_toolbar_title">댕댕이 등록하기</string>
-    <string name="patch_pet_toolbar_title">댕댕이 편집하기</string>
-    <string name="register_pet_name_hint">댕댕이 이름을 입력해주세요</string>
+    <string name="pet_name_title">강아지 이름</string>
+    <string name="register_pet_toolbar_title">강아지 등록하기</string>
+    <string name="patch_pet_toolbar_title">강아지 편집하기</string>
+    <string name="register_pet_name_hint">강아지 이름을 입력해주세요</string>
     <string name="description_title">한 줄 소개</string>
     <string name="description_hint">한 줄 소개를 입력해주세요</string>
     <string name="camera_select_photo">카메라 실행하기</string>
@@ -117,9 +117,9 @@
     <string name="birthday_year">년</string>
     <string name="birthday_month">%02d월</string>
     <string name="neutralized_title">중성화했어요.</string>
-    <string name="pet_size_type_title">댕댕이 사이즈</string>
-    <string name="pet_add_image_title">댕댕이 사진을 추가하세요</string>
-    <string name="pet_gender_type_title">댕댕이 성별</string>
+    <string name="pet_size_type_title">강아지 사이즈</string>
+    <string name="pet_add_image_title">강아지 사진을 추가하세요</string>
+    <string name="pet_gender_type_title">강아지 성별</string>
     <string name="pet_submit_title">등록 완료!</string>
     <string name="bottom_sheet_pet_edit_birthday_title">언제 태어났나요?</string>
     <string name="pet_name_length">%d/20</string>
@@ -128,7 +128,7 @@
     <string name="bottom_home">홈</string>
     <string name="bottom_woof">친구찾기</string>
     <string name="bottom_chat">채팅</string>
-    <string name="bottom_my_page">나의 댕댕이</string>
+    <string name="bottom_my_page">나의 강아지</string>
 
     <!--이미지 선택 바텀 시트-->
     <string name="gallery_select_photo">앨범에서 사진 선택</string>
