--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -263,7 +263,8 @@
     <string name="woof_description">소개</string>
     <string name="woof_footprint_refresh">새로고침</string>
     <string name="woof_end_walk">산책 종료하기</string>
-    <string name="playground_leave_my_playground">놀이터를 나갔어요!</string>
+    <string name="playground_leave_my_playground">놀이터에서 나갔어요!</string>
+    <string name="playground_already_participating_in_playground">이미 참여중인 놀이터가 존재합니다!</string>
     <string name="woof_stop_walk">산책을 종료했어요!</string>
     <string name="woof_status_all">전체</string>
     <string name="woof_address_korea">대한민국</string>
